<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.winterhaven-mc</groupId>
	<artifactId>message-builder-lib</artifactId>
	<version>1.17.2-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>MessageBuilder</name>

	<url>https://github.com/winterhavenmc/MessageBuilderLib</url>

	<description>
		A library for minecraft plugins that manages composing and sending messages to players.
	</description>

	<properties>
		<project.author>Tim Savage</project.author>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>21</maven.compiler.release>
	</properties>

	<issueManagement>
		<system>GitHub Issues</system>
		<url>https://github.com/winterhavenmc/MessageBuilderLib/issues</url>
	</issueManagement>

	<licenses>
		<license>
			<name>GNU General Public License v3.0</name>
			<url>https://www.gnu.org/licenses/gpl-3.0-standalone.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<profiles>
		<profile>
			<id>winterhaven</id>
			<distributionManagement>
				<repository>
					<id>releases</id>
					<url>https://maven.winterhaven-mc.com/repository/releases/</url>
				</repository>
				<snapshotRepository>
					<id>snapshots</id>
					<url>https://maven.winterhaven-mc.com/repository/snapshots/</url>
				</snapshotRepository>
			</distributionManagement>

			<repositories>
				<repository>
					<id>public</id>
					<url>https://maven.winterhaven-mc.com/repository/public/</url>
					<releases>
						<enabled>true</enabled>
					</releases>
					<snapshots>
						<enabled>true</enabled>
					</snapshots>
				</repository>
			</repositories>
		</profile>

		<profile>
			<id>github</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<distributionManagement>
				<repository>
					<id>github</id>
					<name>GitHub winterhavenmc Apache Maven Packages</name>
					<url>https://maven.pkg.github.com/winterhavenmc/MessageBuilderLib/</url>
				</repository>
			</distributionManagement>

			<repositories>
				<repository>
					<id>spigot-repo</id>
					<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
				</repository>
				<repository>
					<id>glaremasters-repo</id>
					<url>https://repo.glaremasters.me/repository/public/</url>
				</repository>
			</repositories>
		</profile>
	</profiles>

	<dependencies>
		<!-- Spigot API -->
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.19.4-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>

		<!-- Multiverse-Core -->
		<dependency>
			<groupId>com.onarandombox.multiversecore</groupId>
			<artifactId>Multiverse-Core</artifactId>
			<version>4.3.1</version>
			<scope>provided</scope>
		</dependency>

		<!-- Unit Testing Dependencies -->
		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.9.0</version>
			<scope>test</scope>
		</dependency>

		<!-- Mock Bukkit Framework -->
		<dependency>
			<groupId>com.github.seeseemelk</groupId>
			<artifactId>MockBukkit-v1.18</artifactId>
			<version>2.85.2</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<!-- Resources -->
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>

		<!-- Test Resources -->
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
				<filtering>true</filtering>
			</testResource>
		</testResources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.5.0</version>
				<executions>
					<execution>
						<id>ban-bad-log4j-versions</id>
						<phase>validate</phase>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<bannedDependencies>
									<excludes>
										<exclude>org.apache.logging.log4j:log4j-core:(,2.17.0)</exclude>
									</excludes>
								</bannedDependencies>
							</rules>
							<fail>true</fail>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- Compile Java jar -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
			</plugin>

			<!-- Create Javadoc jar -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<doclint>all,-missing</doclint>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- Create Sources jar -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- Plugin for Unit Tests -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.3.1</version>

				<configuration>
					<junitArtifactName>org.junit.jupiter:junit-jupiter</junitArtifactName>
					<trimStackTrace>false</trimStackTrace>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
